--- a/agijagi/app/src/main/res/layout/fragment_login.xml
+++ b/agijagi/app/src/main/res/layout/fragment_login.xml
@@ -49,6 +49,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="24dp"
+                app:errorEnabled="true"
                 android:background="@drawable/wide_box_rounded_stroke"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -70,6 +71,9 @@
                 android:layout_marginEnd="24dp"
                 android:background="@drawable/wide_box_rounded_stroke"
                 app:endIconMode="password_toggle"
+                app:errorEnabled="true"
+                app:counterEnabled="true"
+                app:counterMaxLength="15"
                 app:layout_constraintTop_toBottomOf="@+id/editinputlayout_login_emailedit">
 
                 <com.google.android.material.textfield.TextInputEditText
