--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -304,7 +304,7 @@
             app:destination="@id/notificationFragment" />
         <action
             android:id="@+id/action_buyerMypageFragment_to_alarmManagementFragment"
-            app:destination="@id/alarmManagementFragment" />
+            app:destination="@id/buyerNotificationSettingFragment" />
     </fragment>
     <fragment
         android:id="@+id/userChatRoomFragment"
@@ -462,10 +462,10 @@
             app:destination="@id/sellerMypageFragment" />
     </fragment>
     <fragment
-        android:id="@+id/alarmManagementFragment"
-        android:name="likelion.project.agijagi.buyermypage.AlarmManagementFragment"
+        android:id="@+id/buyerNotificationSettingFragment"
+        android:name="likelion.project.agijagi.buyermypage.BuyerNotificationSettingFragment"
         android:label="fragment_alarm"
-        tools:layout="@layout/fragment_alarm" >
+        tools:layout="@layout/fragment_buyer_notification_setting" >
         <action
             android:id="@+id/action_alarmManagementFragment_to_buyerMypageFragment"
             app:destination="@id/buyerMypageFragment" />
