--- a/agijagi/app/src/main/res/layout/item_shipping_management.xml
+++ b/agijagi/app/src/main/res/layout/item_shipping_management.xml
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/jagi_white_30">
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/checkBox_shipping_management_basic"
+            style="@style/CustomCheckBoxSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView_shipping_management_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:text="배송지1"
             android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/checkBox_shipping_management_basic"
+            app:layout_constraintStart_toEndOf="@+id/checkBox_shipping_management_basic"
+            app:layout_constraintTop_toTopOf="@+id/checkBox_shipping_management_basic" />
 
         <TextView
             android:id="@+id/textView_shipping_management_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:text="010-9999-7777"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/checkBox_shipping_management_basic"
             app:layout_constraintTop_toBottomOf="@+id/textView_shipping_management_title" />
 
         <TextView
             android:id="@+id/textView_shipping_management_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="16dp"
             android:text="어디시 어쩌구 무슨동 어느건물"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/checkBox_shipping_management_basic"
             app:layout_constraintTop_toBottomOf="@+id/textView_shipping_management_phone" />
+
+        <TextView
+            android:id="@+id/textView_shipping_management_address_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
+            android:text="상세주소 들어가는 텍스트텍스트텍스트"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/checkBox_shipping_management_basic"
+            app:layout_constraintTop_toBottomOf="@+id/textView_shipping_management_address" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_shipping_management_delete"
@@ -67,13 +81,11 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/narrow_box_rounded_button_solid"
-            android:text="변경"
+            android:text="수정"
             android:textColor="@color/jagi_hint_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </com.google.android.material.card.MaterialCardView>
