Design: 알림 리스트 화면 UI #100 (#115)
* Rename: Notification 이름 수정 #100

Notification to NotificationList

* Design: 알림리스트 화면작업 #100

화면 구성, 리소스 생성

* Design: 알림 리스트 생성 #100

개발용 데이터로 리스트 생성, 기본 동작 구현

* Fix: Typo after merge conflict

병합 충돌 해결 후 발생한 사이드 이펙트를 해결함

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -321,8 +321,8 @@
             android:id="@+id/action_buyerMypageFragment_to_profileManagementFragment"
             app:destination="@id/profileManagementFragment" />
         <action
-            android:id="@+id/action_buyerMypageFragment_to_notificationFragment"
-            app:destination="@id/notificationFragment" />
+            android:id="@+id/action_buyerMypageFragment_to_notificationListFragment"
+            app:destination="@id/notificationListFragment" />
         <action
             android:id="@+id/action_buyerMypageFragment_to_alarmManagementFragment"
             app:destination="@id/buyerNotificationSettingFragment" />
@@ -393,8 +393,8 @@
             android:id="@+id/action_sellerMypageFragment_to_userChatListFragment"
             app:destination="@id/userChatListFragment" />
         <action
-            android:id="@+id/action_sellerMypageFragment_to_notificationFragment"
-            app:destination="@id/notificationFragment" />
+            android:id="@+id/action_sellerMypageFragment_to_notificationListFragment"
+            app:destination="@id/notificationListFragment" />
         <action
             android:id="@+id/action_sellerMypageFragment_to_productAddFragment"
             app:destination="@id/productAddFragment" />
@@ -486,15 +486,15 @@
             app:destination="@id/orderManagementFragment" />
     </fragment>
     <fragment
-        android:id="@+id/notificationFragment"
-        android:name="likelion.project.agijagi.notification.NotificationFragment"
-        android:label="fragment_notification"
-        tools:layout="@layout/fragment_notification" >
+        android:id="@+id/notificationListFragment"
+        android:name="likelion.project.agijagi.notification.NotificationListFragment"
+        android:label="fragment_notification_list"
+        tools:layout="@layout/fragment_notification_list" >
         <action
-            android:id="@+id/action_notificationFragment_to_buyerMypageFragment"
+            android:id="@+id/action_notificationListFragment_to_buyerMypageFragment"
             app:destination="@id/buyerMypageFragment" />
         <action
-            android:id="@+id/action_notificationFragment_to_sellerMypageFragment"
+            android:id="@+id/action_notificationListFragment_to_sellerMypageFragment"
             app:destination="@id/sellerMypageFragment" />
     </fragment>
     <fragment
